--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,32 @@ services:
     image: semtech/mu-dispatcher:1.1.2
     links:
       - resource:resource
+      - mockauth:mockauth
     volumes:
       - ./config/dispatcher:/config
-  db:
+  deltanotifier:
+    image: semtech/mu-delta-notifier
+    volumes:
+      - ./config/delta:/config
+  database:
+    image: semtech/mu-authorization
+    volumes:
+      - ./config/authorization:/config
+    environment:
+      LOG_INCOMING_SPARQL_QUERIES: "on"
+      LOG_OUTGOING_SPARQL_QUERIES: "on"
+      LOG_ACCESS_RIGHTS: "on"
+      LOG_SERVER_CONFIGURATION: "on"
+      LOG_DELTA_CLIENT_COMMUNICATION: "on"
+      MU_SPARQL_ENDPOINT: "http://triplestore:8890/sparql"
+    links:
+      - backingTriplestore:triplestore
+      - deltanotifier:deltanotifier
+  mockauth:
+    image: madnificent/mu-mock-access-rights-service
+    links:
+      - database:database
+  backingTriplestore:
     image: tenforce/virtuoso:1.3.2-virtuoso7.2.2
     environment:
       SPARQL_UPDATE: "true"
@@ -25,6 +48,40 @@ services:
   resource:
     image: semtech/mu-cl-resources:1.17.1
     links:
-      - db:database
+      - database:database
     volumes:
       - ./config/resources:/config
+  musearch:
+    image: semtech/mu-search
+    ports:
+      - 8889:80
+    links:
+      - elasticsearch:elasticsearch
+      - database:db
+    environment:
+      RACK_ENV: development
+      MU_APPLICATION_GRAPH: "http://mu.semte.ch/application"
+    volumes:
+      - ./config/elastic:/config
+      - ./data/files:/data
+  elasticsearch:
+    build: ./elasticsearch-image
+    volumes:
+      - ./data/elasticsearch/:/usr/share/elasticsearch/data
+    ports:
+      - 9200:9200
+    environment:
+      TAKE_FILE_OWNERSHIP: /mnt/kans-search-data/kanselarij/elasticsearch
+      ES_JAVA_OPTS: "-Xms2g -Xmx2g"
+  kibana:
+    image: docker.elastic.co/kibana/kibana:6.4.2
+    environment:
+      ELASTICSEARCH_URL: "http://elasticsearch:9200"
+    ports:
+      - 5601:5601
+  file:
+    image: semtech/mu-file-service:3.1.0
+    links:
+      - database:database
+    volumes:
+      - ./data/files:/share
